# JCS_simulate

./: .gitignore  LICENSE  README.md
platform/: star-3-mix-2500.0.xml
src/: CMakeLists.txt  simulate.cpp
src/deploy/: deploy-128-82-random.xml  deploy-128-82-random.xml.name  genDeploy.py
src/platform/: genPlatform.py  pcie-128-mix-100Gbps.xml  pcie-128-mix-1Gbps.xml  pcie-128-mix-25Gbps.xml  pcie-128-mix-40Gbps.xml  pcie-128-mix.xml
src/trace/: GPUProfile.csv  ModelProfile.csv
